--- a/static/css/contract_management.css
+++ b/static/css/contract_management.css
@@ -27,7 +27,7 @@ body{
     color:#7fa4c2;
     font-family:宋体;
 }
-#login{
+#login_id{
     color: #ff7300;
     padding-right: 5px;
     font-family: Arial;
