--- a/contract_m2/static/css/contract_management.css
+++ b/contract_m2/static/css/contract_management.css
@@ -89,7 +89,7 @@ body{
 }
 /*mian*/
 .main .content_header{
-    border-bottom:1px solid #dbe1e3;
+    border-bottom:1px solid #edf0f4;
     margin-bottom:50px;
 }
 .content_header h2{
@@ -253,6 +253,8 @@ body{
 }
 .pagination a{
     display:block;
+    width:100%;
+    height:100%;
     color:#333;
 }
 .pagination a:hover{
@@ -269,38 +271,29 @@ body{
 .pagination_prev a:after{
     content:"\2039";
     display:block;
-    width:26px;
-    height:26px;
+    height:28px;
+    width:28px;
     text-align:center;
-    font-size:20px;
+    font-size:14px;
     line-height:26px;
 }
 .pagination_jump_next a:after{
     content:"\2022\2022\2022";
     display:block;
-    height:26px;
-    width:26px;
+    height:28px;
+    width:28px;
     text-align:center;
     opacity:0.5;
     font-size:12px;
     line-height:26px;
 }
-.pagination_jump_next a:hover:after{
-    content:"\203A\203A";
-    font-size:20px;
-}
-.pagination_jump_prev a:hover:after{
-    content:"\2039\2039";
-    font-size:20px;
-}
-
 .pagination_next a:after{
     content:"\203A";
     display:block;
-    height:26px;
-    width:26px;
+    height:28px;
+    width:28px;
     text-align:center;
-    font-size:20px;
+    font-size:14px;
     line-height:26px;
 }
 .pagination_quick_jump{
